alteração no formulario

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <label><input type="checkbox">Feminino</label>
             </div>
 
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="btn">Enviar</button>
 
 
         </form>
